# OriannaBot

./: .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  config.json  docker-compose.yml  package.json  tsconfig.json
backend/: .gitignore  config.json.template  knexfile.js  package.json  tsconfig.json
backend/assets/promotion/: eog_intro_magic.webm  levelupexplosion_small.webm
backend/graphics/: profile-chart.html  promotion.html  stats-chart.html  top-embed.html  top.html
backend/migrations/: 20180205133223_create_users_table.js  20180205133629_create_league_accounts_table.js  20180205134536_create_servers_table.js  20180205134731_create_roles_table.js  20180205135226_create_role_conditions_table.js  20180205135615_create_channel_blacklists_table.js  20180205194616_create_user_champion_stats_table.js  20180207151854_create_user_ranks_table.js  20180506221117_create_user_auth_keys_table.js  20180715125722_add_update_timestamps_to_user.js  20180720011309_add_privacy_toggles_to_users.js  20180729121229_add_completed_intro_to_servers.js  20180813140031_create_user_mastery_deltas_table.js  20181103220422_add_combinator_field_to_roles.js  20181201200621_upgrade_to_v4_ids.js  20190427212430_remove_champion_play_count_conditions.js  20190427212833_remove_games_played_column.js  20191207162135_create_tft_id_columns.js  20191208170725_add_language_column_to_server.js  20191208170729_add_language_column_to_user.js  20191208194137_add_engagement_json_column_to_server.js  20200322161439_add_primary_to_league_account.js  20200322161723_add_nickname_pattern_to_servers.js  20200323174839_add_privacy_toggles_to_league_accounts.js  20200605232145_add_ignore_field_to_users.js  20210325185836_add_server_leaderboard_role_requirement_to_servers.js  20210501123045_create_guild_members_table.js  20210508125100_convert_engagement_to_jsonb.js  20210508181814_optimize_update_selection_queries.js  20210701150721_add_unique_constraint_to_user_champion_stats.js  20210715192602_convert_user_mastery_deltas_to_timescale.js  20231115192044_add_riot_id_columns_to_users.js  20240412141444_drop_league_account_username.js
backend/src/: config.ts  elastic.ts  i18n.ts  index.ts  puppeteer.ts  redis.ts  shockwave.ts
backend/src/cluster/: ipc-base.ts  master-ipc.ts  worker-ipc.ts
backend/src/database/: index.ts  leaderboards.ts  league_account.ts  member.ts  role.ts  server.ts  user.ts
backend/src/discord/: client.ts  command.ts  response-context.ts  response.ts  slash-commands.ts  updater.ts
backend/src/dissonance/: amqp-client.ts  types.ts
backend/src/graphics/: profile.ts  promotion.ts  stats.ts  tools.ts  top.ts
backend/src/riot/: api.ts  static-data.ts  types.ts
backend/src/types/: conditions.ts
backend/src/util/: avatar.ts  expiring-map.ts  format-name.ts  (+3 more)
dissonance/: .env.template  Cargo.toml  Dockerfile  README.md  docker-compose.yml
dissonance/.sqlx/: query-297c1349ec0afdf9c597bec7499916789c108aaacb662032c1090f3aa3820e44.json  query-b4f96cc796d36e993e521e565a4c48bf9a3e052ede7204fee44c5927d5b19107.json  query-bdab322f638a7a285f6e1873f89b44cb46e948e600538389f8ed8824787d3827.json
dissonance/src/: cache.rs  database.rs  forwarder.rs  main.rs  worker.rs
frontend/: package.json  tsconfig.json  webpack.config.js
frontend/src/: common.styl  config.ts  index.html  index.ts
shockwave/: .env.template  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rustfmt.toml
shockwave/shockwave_core/: Cargo.toml
shockwave/shockwave_core/.sqlx/: query-4be14faf25d9dd6377f1cbf5a6e6473488c4bb04137423fc504dd258f13c65cd.json  query-cfbad0dbfe0db78ad951eec83511d1598ce02e718e3c570437ec086833568512.json
shockwave/shockwave_core/src/: database.rs  db_model.rs  evaluate.rs  lib.rs  orianna.rs  riot_api.rs  role_model.rs  util.rs  worker.rs
shockwave/shockwave_core/src/updater/: fetch.rs  mod.rs  update.rs
shockwave/shockwave_interface/: Cargo.toml
shockwave/shockwave_interface/src/: main.rs
src/: database.ts  index.ts
src/api/: server.ts
src/discord/: client.ts  message-handler.ts  response.ts  updater.ts
src/riot/: api.ts  types.ts
src/util/: ranges.ts
trans/: .gitignore  README.md  build.js  cli.js  de.yaml  en.yaml  package.json
trans-ui/: README.md  package.json  tsconfig.json  vue.config.js
trans-ui/public/: index.html
trans-ui/src/: App.vue  global.styl  highlighter.ts  main.ts  sections.ts  shims-twemoji.d.ts  shims-vue.d.ts  shims.d.ts  store.ts  types.ts
trans/languages/: cs-CZ.yaml  de.yaml  el-GR.yaml  en.yaml  es-ES.yaml  es-MX.yaml  es.yaml  fr.yaml  hu.yaml  it-IT.yaml  ja-JP.yaml  ko.yaml  pl.yaml  pt-BR.yaml  ru.yaml  sv-SE.yaml  tr.yaml  uk-UA.yaml
trans/src/: build.js  index.js  types.d.ts  utils.js
(+87 files in other folders)
