[package]
name = "dissonance"
version = "0.1.0"
edition = "2018"

[dependencies]
twilight-gateway = "0.7.1"
twilight-model = "0.7.1"
twilight-http = "0.7.1"
dotenv = "0.15.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
tokio = { version = "1.5.0", features = ["macros"] } 
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "json"] }
futures = "0.3"
serde_json = "1.0.59"
dashmap = "4.0.2"
redis = { version = "0.20.0", features = ["tokio-comp"] }
lapin = { version = "1.7.0", default-features = false, features = ["rustls"] }
lazy_static = "1.4.0"
compile-time-run = "0.2.11"