[package]
name = "dissonance"
version = "0.1.0"
edition = "2018"

[dependencies]
twilight-gateway = "0.10.1"
twilight-model = "0.10.2"
twilight-http = "0.10.2"
dotenv = "0.15.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
tokio = { version = "1.15.0", features = ["macros", "time"] } 
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "json"] }
futures = "0.3"
serde_json = "1.0.59"
dashmap = "4.0.2"
redis = { version = "0.21.4", features = ["tokio-comp"] }
lapin = { version = "1.7.0", default-features = false, features = ["rustls"] }
lazy_static = "1.4.0"
compile-time-run = "0.2.11"
