[package]
name = "dissonance"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-gateway = "0.15"
twilight-model = "0.15"
twilight-http = "0.15"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3"
tokio = { version = "1.34", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "json",
] }
futures = "0.3"
serde_json = "1.0"
dashmap = "5"
redis = { version = "0.23", features = ["tokio-comp"] }
lapin = { version = "2.3", default-features = false, features = ["rustls"] }
lazy_static = "1.4.0"
compile-time-run = "0.2.11"
tokio-retry = "0.3.0"
