[package]
name = "shockwave_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shockwave_core"
path = "src/lib.rs"

[dependencies]
twilight-model = "0.10"
twilight-http = "0.10"
dotenv = "0.15.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
tokio = { version = "1.5.0", features = ["macros", "time"] } 
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "json"] }
futures = "0.3"
serde_json = "1.0.59"
serde = "1.0.126"
itertools = "0.10.0"
riven = { version = "2.7.1", default-features = false, features = ["rustls-tls", "tracing"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "gzip", "json" ] }
lazy_static = "1.4"