[package]
name = "shockwave_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shockwave_core"
path = "src/lib.rs"

[dependencies]
twilight-model = "0.14"
twilight-http = "0.14"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3"
tokio = { version = "1.34", features = ["full"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "json",
] }
futures = "0.3"
serde_json = "1.0"
serde = "1.0.126"
itertools = "0.10.0"
riven = { version = "2.70.0", default-features = false, features = [
    "rustls-tls",
    "tracing",
] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "json",
] }
lazy_static = "1.4"
rand = "0.8.5"
