[package]
name = "shockwave_interface"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shockwave_core = { path = "../shockwave_core" }
actix-web = "4.0.0-beta.6"
itertools = "0.10.0"
serde_json = "1.0.59"
dotenv = "0.15.0"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
futures = "0.3"
