[package]
name = "shockwave_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shockwave_core = { path = "../shockwave_core" }
actix-web = "4.0.0-beta.6"
itertools = "0.10.0"
serde_json = "1.0"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3"
futures = "0.3"
